Add GitHub Actions for Docker image build and deployment